in destroy, benefit, save-environment , start pages numbers language problme is solved and in start flower alignmet problem is solved

--- a/benefit-from-nature.css
+++ b/benefit-from-nature.css
@@ -47,20 +47,22 @@
 }
 
 html[lang="English"] body {
-  font-family: "BalooRegular", system-ui, sans-serif !important;
+  font-family: "BalooRegular", system-ui, sans-serif ;
 }
 
-html[lang="Hindi"] body {
-  font-family: "ITFDevanagariBold", "Noto Sans Devanagari", serif !important;
+html[lang="Hindi"] body{
+  font-family: "ITFDevanagariBold","Noto Sans Devanagari", sans-serif !important;
 }
 
 html[lang="Gujarati"] body {
-  font-family: "GujaratiRegular", "Noto Sans Gujarati", sans-serif !important;
+  font-family: "GujaratiRegular", "Noto Sans Gujarati";
+}
+
+html, body{
+  font-family: "BalooRegular", sans-serif;
 }
 
 body {
-  /* position: relative ; */
-  font-family: "BalooRegular", sans-serif;
   position: fixed;
   width: 100vw;
   height: auto;
@@ -96,6 +98,7 @@ nav {
   align-items: center;
   padding: 1vw 2vw;
   z-index: 999;
+   /* font-family: "BalooRegular" ; */
 }
 
 .navbar-language {
@@ -110,6 +113,7 @@ nav {
   padding: 0vh 0.4vw;
   border-radius: 50vb;
   transition: border-radius 0.35s ease;
+  font-family: "BalooRegular" ;
 }
 
 
@@ -131,6 +135,7 @@ nav {
     box-shadow 0.25s ease,
     background-color 0.25s ease,
     opacity 0.25s ease;
+  font-family: "BalooRegular" ;
 }
 
 .navbar-language>div:hover {
@@ -537,6 +542,7 @@ main {
 .swiper-slide video {
   width: 57vw;
   height: 67vh;
+  object-fit: contain !important;
 }
 
 .board-text-overlay {
@@ -657,7 +663,7 @@ body.intro .title {
   position: fixed !important;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%) scale(1.35);
+  transform: translate(-55%, -50%) scale(1.25);
   z-index: 999999;
   will-change: transform, filter;
   filter: blur(0);
@@ -669,17 +675,17 @@ body.intro.intro-fly .title {
 
 @keyframes flyToNav {
   0% {
-    transform: translate(-50%, -50%) scale(1.35);
+    transform: translate(-55%, -50%) scale(1.25);
     filter: blur(0px);
   }
 
   45% {
-    transform: translate(-50%, -50%) scale(1.42);
+    transform: translate(-55%, -50%) scale(1.25);
     filter: blur(0.2px);
   }
 
   100% {
-    transform: translate(-50%, -50%) translate(var(--dx), var(--dy)) scale(1);
+    transform: translate(-55%, -50%) translate(var(--dx), var(--dy)) scale(1);
     filter: blur(0px);
   }
 }
