--- a/start.css
+++ b/start.css
@@ -43,7 +43,7 @@
   font-style: normal;
 }
 html[lang="English"] body {
-  font-family: "BalooRegular", system-ui, sans-serif !important;
+  font-family: "BalooRegular", system-ui, sans-serif ;
 }
 
 html[lang="Hindi"] body {
@@ -54,7 +54,10 @@ html[lang="Gujarati"] body {
   font-family: "GujaratiRegular", "Noto Sans Gujarati", sans-serif !important;
 }
 
-html, body { height: 100%; }
+html, body { 
+  height: 100%;
+    font-family: "BalooRegular", sans-serif;
+}
 
 body {
   display: flex;
@@ -112,7 +115,7 @@ nav {
   padding: 0vh 0.4vw;
   border-radius: 50vb;
   transition: border-radius 0.35s ease;
-}
+    font-family: "BalooRegular", sans-serif;}
 
 
 .navbar-language > div {
@@ -133,6 +136,7 @@ nav {
     box-shadow 0.25s ease,
     background-color 0.25s ease,
     opacity 0.25s ease;
+        font-family: "BalooRegular", sans-serif;
 }
 
 .navbar-language > div:hover {
@@ -276,7 +280,7 @@ main{
   position: absolute;
   padding: 0 7vw;
   width: 100%;
-  height: 50vh;
+  height: 25vw;
   display: flex; 
   gap: 5vw;
   bottom:-3vh;
@@ -285,35 +289,46 @@ main{
 }
 .flower-container a img{
   width: 100%;
-  height: 40vh;
+  height: 21vw;
   /* background-color: pink; */
 }
 
 .flower-container a{
   position: relative;
   text-decoration: none;
-     transition: transform 0.35s ease;
-   transform-origin: bottom center ;
    z-index: 1!important;
    display: block!important;
+    transform-origin: bottom center;
+  transition: transform 0.35s ease;
 }
 .flower-container a p{
+  width: 10vw;
+  height: 5vw;
   font-size: 1.5vw;
   line-height: 2.8vh;
   padding:1vh 0.2vw;
   text-align: center;
 }
-.flower-container .flower2{
-  margin-top: 2vh;
+
+html[lang="Gujarati"] .flower-container a p {
+  font-weight: bolder;  
+    font-size: 1.3vw;
+}
+html[lang="Hindi"] .flower-container a p {
+  font-weight: bolder!important; 
+  font-size: 1.5vw; 
 }
 
 .flower-container a:hover{
-  transform: scale(1.08);
-  z-index: 100!important;
+  transform: scale(1.12);
+  z-index: 9999; /* bring it above others */
 }
-.flower-container a:hover .num{
-  z-index: 9999!important;
+
+.flower-container a:active{
+  transform: scale(1.12);
+  z-index: 9999;
 }
+
 .flower-container .flower1{
     transform-origin: bottom center;
   animation: flowerPop 2s ease-in-out 1s infinite; 
@@ -331,24 +346,33 @@ main{
 .num{
   position: absolute;
   font-size: 2.8vw;
-  z-index: 9999!important;
+  z-index: 10000;
   pointer-events: none;
-  transform: translateZ(0);
+  width: 20%;
+  height: 4vw;
+  text-align: center;
 }
+html[lang="Gujarati"] .num {
+  font-size: 2.5vw;
+  font-weight: bolder;  
+}
+html[lang="Hindi"] .num {
+  font-size: 2.5vw;
+  font-weight: bolder!important;  
+}
+
 .num1{
-  bottom: 24.8vh;
-  left: 48%;
-  transform: translateX(-50%);
+    /* position: absolute; */
+  bottom: 12vw;
+  left: 38%;
 }
 .num2{
-  bottom: 20.5vh;
-  left: 47%;
-    transform: translateX(-50%);
+  bottom: 11.5vw;
+  left: 36.9%;
 }
 .num3{
-  bottom: 22.8vh;
-  left: 50%;
-    transform: translateX(-50%);
+  bottom: 11.2vw;
+  left: 42%;
 }
 /* title */
 .title{
@@ -365,118 +389,4 @@ main{
   color:#006E90;
    text-shadow: 0.2vw 0.4vw 0.4vw rgba(0, 110, 144, 0.35);
 }
-
-/* .flower-container{
-  position: absolute;
-  bottom: -6vw!important;             
-  left: 50%;
-  transform: translateX(-50%);  
-  height: 40vh;
-  width: 50vw;
-  height: 30vw;           
-  display: flex;
-  justify-content: space-between;
-
-  z-index: 1000;
-}
-.flower-container .flower1{
-    transform-origin: bottom center;
-  animation: flowerPop 1.2s ease-in-out 1s infinite; 
-  will-change: transform;
-}
-
-@keyframes flowerPop {
-  0%   { transform: scale(1); }
-  20%  { transform: scale(1.12); }
-  40%  { transform: scale(0.98); }
-  60%  { transform: scale(1.08); }
-  80%  { transform: scale(1); }
-  100% { transform: scale(1); }
-}
-.flower-container .flower2{
-  margin-top: 1.5vh;
-}
-.flower-container .flower a img{
-  width: 10vw;
-  height: 35vh;
-  border-radius: 1.2vw;
-  transition: transform 0.35s ease, box-shadow 0.35s ease;
-}
-.flower-container .flower a {
-  text-decoration: none;
-}
-.flower-container .flower a .sub-title{
-  text-align: center;
-  padding: 0vh 1.5vw;
-  font-size: 2vw;
-  font-weight: bolder;
-  color:#FAA22C;
-  border-radius: 0.8vw;
-  transition: transform 0.35s ease;
-  width: 15vw;
-  height: 15vh;
-}
- .sub-title p{
-  display: inline-block;
-  line-height: 1!important;   
-}
-
-.flower-container .flower:hover{
-  transform: scale(1.08);
-}
-.flower-container .flower{
-  position: relative;
-   transition: transform 0.35s ease;
-}
-
-
-.num{
-  position: absolute;
-  font-size: 3vw;
-  font-weight: bold;
-  color: white;
-  z-index: 10!important;
-}
-.num1{
-  top: 36%;
-  left: 42%;
-}
-.num2{
-  top: 38%!important;
-  left: 42%;
-  color: white!important;
-}
-.num3{
-  top:38%;
-  left: 45%;
-}
-@keyframes titleMove {
-  0% {
-    top: 50%;
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0.98);
-  }
-  15% {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-  100% {
-    top: 20%;
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-
-
-@keyframes flowersIn {
-  0% {
-    opacity: 0;
-    transform: translateY(1vw) scale(0.95);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0) scale(1);
-  }
-}
-*/
 
